--- a/TestEntityDatabase/TestEntityDatabase.vcxproj
+++ b/TestEntityDatabase/TestEntityDatabase.vcxproj
@@ -68,6 +68,14 @@
     <ClCompile Include="StaticTestComponentConcept.cpp" />
     <ClCompile Include="StaticTestDatabaseAccess.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Library\Usagi\Usagi.vcxproj">
+      <Project>{f9061c06-bce6-416b-9aeb-31351810b7ba}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Module\Usagi\Module\Platform\Win10\Win10.vcxproj">
+      <Project>{ba6b6731-dfa8-4da0-b121-d3d8d584b001}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
