--- a/TestEntityDatabase/TestEntityDatabase.vcxproj.filters
+++ b/TestEntityDatabase/TestEntityDatabase.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StaticTestComponentFilter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
