--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,7 @@
 <Project>
   <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)..\'))" />
   <PropertyGroup>
-    <Dir_IncludePath>$(SolutionDir)\Library;$(SolutionDir)\Module;$(Dir_IncludePath)</Dir_IncludePath>
+    <Dir_IncludePath>$(SolutionDir)Library;$(SolutionDir)Module;$(Dir_IncludePath)</Dir_IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
