--- a/TestUsagiCore/TestUsagiCore.vcxproj.filters
+++ b/TestUsagiCore/TestUsagiCore.vcxproj.filters
@@ -27,15 +27,15 @@
     <ClCompile Include="Library\Graph\TransitiveReduce.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Library\Graph\LongestPath.cpp">
+    <ClCompile Include="Library\Graph\FindPath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Library\Graph\Degree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\Graph\TestGraphAdjMatFixed.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Library\Graph\TestGraphAdjListDyn.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
