update graph tests: level and lexical topological order

--- a/TestUsagiCore/TestUsagiCore.vcxproj
+++ b/TestUsagiCore/TestUsagiCore.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="Library\Graph\Degree.cpp" />
     <ClCompile Include="Library\Graph\IsCyclic.cpp" />
     <ClCompile Include="Library\Graph\FindPath.cpp" />
+    <ClCompile Include="Library\Graph\Level.cpp" />
     <ClCompile Include="Library\Graph\TransitiveReduce.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Library\Graph\TopologicalSort.cpp" />
