--- a/TestUsagiCore/TestUsagiCore.vcxproj.filters
+++ b/TestUsagiCore/TestUsagiCore.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Library\Graph\Degree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Library\Graph\Level.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\Graph\TestGraphAdjMatFixed.hpp">
