--- a/TestUsagiCore/TestUsagiCore.vcxproj.filters
+++ b/TestUsagiCore/TestUsagiCore.vcxproj.filters
@@ -36,6 +36,21 @@
     <ClCompile Include="Library\Graph\FindPath.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Entity\StaticTestComponentAccess.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Entity\StaticTestComponentConcept.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Entity\StaticTestComponentFilter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Entity\StaticTestDatabaseAccess.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Entity\StaticTestSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\Graph\TestGraphFixed.hpp">
