update core tests

--- a/TestUsagiCore/TestUsagiCore.vcxproj
+++ b/TestUsagiCore/TestUsagiCore.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="Library\Graph\TransitiveReduce.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Runtime\MemoryMappedFile.cpp" />
+    <ClCompile Include="Runtime\PagedStorage.cpp" />
     <ClCompile Include="Runtime\VmAllocator.cpp" />
   </ItemGroup>
   <ItemGroup>
