--- a/TestUsagiCore/TestUsagiCore.vcxproj
+++ b/TestUsagiCore/TestUsagiCore.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="Library\Graph\Level.cpp" />
     <ClCompile Include="Library\Graph\TopologicalSort.cpp" />
     <ClCompile Include="Library\Graph\TransitiveReduce.cpp" />
+    <ClCompile Include="Library\Meta\Set.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Runtime\MemoryMappedFile.cpp" />
     <ClCompile Include="Runtime\PagedStorage.cpp" />
