--- a/TestUsagiCore/TestUsagiCore.vcxproj.filters
+++ b/TestUsagiCore/TestUsagiCore.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="Runtime\PagedStorage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Library\Meta\Set.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\Graph\TestGraphFixed.hpp">
