update edb tests

--- a/TestUsagiCore/TestUsagiCore.vcxproj
+++ b/TestUsagiCore/TestUsagiCore.vcxproj
@@ -90,12 +90,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Entity\ComponentTrait.cpp" />
     <ClCompile Include="Entity\EntityPage.cpp" />
     <ClCompile Include="Entity\StaticTestComponentAccess.cpp" />
     <ClCompile Include="Entity\StaticTestComponentConcept.cpp" />
     <ClCompile Include="Entity\StaticTestComponentFilter.cpp" />
     <ClCompile Include="Entity\StaticTestDatabaseAccess.cpp" />
     <ClCompile Include="Entity\StaticTestSystem.cpp" />
+    <ClCompile Include="Entity\Storage.cpp" />
     <ClCompile Include="Library\Graph\Degree.cpp" />
     <ClCompile Include="Library\Graph\FindPath.cpp" />
     <ClCompile Include="Library\Graph\IsCyclic.cpp" />
