--- a/TestUsagiCore/TestUsagiCore.vcxproj
+++ b/TestUsagiCore/TestUsagiCore.vcxproj
@@ -91,6 +91,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Entity\ComponentTrait.cpp" />
+    <ClCompile Include="Entity\EntityDatabase.cpp" />
     <ClCompile Include="Entity\EntityPage.cpp" />
     <ClCompile Include="Entity\StaticTestComponentAccess.cpp" />
     <ClCompile Include="Entity\StaticTestComponentConcept.cpp" />
