--- a/TestAssetStreaming/TestAssetStreaming.vcxproj
+++ b/TestAssetStreaming/TestAssetStreaming.vcxproj
@@ -83,10 +83,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Module\Usagi\Module\Platform\Win10\Win10.vcxproj">
+    <ProjectReference Include="..\..\Modules\Usagi\Modules\Platforms\Win10\Win10.vcxproj">
       <Project>{ba6b6731-dfa8-4da0-b121-d3d8d584b001}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\Module\Usagi\Module\Service\Asset\Asset.vcxproj">
+    <ProjectReference Include="..\..\Modules\Usagi\Modules\Services\Asset\Asset.vcxproj">
       <Project>{8722e8a6-ddc8-4283-8dff-45cd15e7dc6f}</Project>
     </ProjectReference>
   </ItemGroup>
