--- a/TestGraphicsVulkan/TestGraphicsVulkan.vcxproj.filters
+++ b/TestGraphicsVulkan/TestGraphicsVulkan.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Pipeline.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CommandList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.hpp">
