--- a/TestAssetStreaming/TestAssetStreaming.vcxproj.filters
+++ b/TestAssetStreaming/TestAssetStreaming.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AssetLoading.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="3.txt" />
+    <Text Include="2.txt" />
+    <Text Include="1.txt" />
   </ItemGroup>
 </Project>
