--- a/TestUsagiCore/TestUsagiCore.vcxproj
+++ b/TestUsagiCore/TestUsagiCore.vcxproj
@@ -108,8 +108,8 @@
     <ClCompile Include="Library\Meta\Set.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Runtime\CircularAllocatorTest.cpp" />
+    <ClCompile Include="Runtime\DynamicArrayMmappedTest.cpp" />
     <ClCompile Include="Runtime\MemoryMappedFile.cpp" />
-    <ClCompile Include="Runtime\PagedStorage.cpp" />
     <ClCompile Include="Runtime\VmAllocator.cpp" />
   </ItemGroup>
   <ItemGroup>
