--- a/TestSampling/TestSampling.vcxproj.filters
+++ b/TestSampling/TestSampling.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Probabilites.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Sampling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ProbabilityCommon.hpp">
